# cpp-retained-ui

./: .clang-format  .gitmodules  CMakeLists.txt  ImageIcon.h  arch.excalidraw
assets/docs/: arch.excalidraw  tree-references.md
src/: core.h  elements.h  main.cpp  repository.h  ui.h  utils.h
src/core/: CMakeLists.txt  ThreadSafeQueue.h  event.h
src/core/event/: Event.cpp  Event.h  EventManager.cpp  EventManager.h  data.h  events.h
src/core/event/data/: keyboard.h  mouse.h
src/core/layer/: Layer.cpp  Layer.h  StackingContext.h
src/core/repository/: TextureRepository.cpp  TextureRepository.h
src/elements/: Button.h  Element.cpp  Element.h  Root.cpp  Root.h
src/repository/: CMakeLists.txt  FontRepository.cpp  FontRepository.h  Repository.cpp  Repository.h  TextureRepository.cpp
src/styles/: Display.h  Flex.h  Overflow.h  PositionType.h  Size.h  Spacing.h  Style.h
src/ui/: CMakeLists.txt  defaults.h  elements.h  icons.h  rendering.h  styles.h
src/ui/defaults/: layouts.cpp  layouts.h  styles.cpp  styles.h
src/ui/elements/: Button.cpp  Button.h  Element.cpp  Element.h  Image.cpp  Image.h  Root.cpp  Root.h  Row.h  Stack.cpp  Stack.h  Text.cpp  Text.h  View.h
src/ui/icons/: ImageIcon.h
src/ui/layer/: Layer.cpp  Layer.h  LayerContext.h
src/ui/rendering/: Layer.cpp  Layer.h  ScissorStack.cpp  ScissorStack.h  StackingContext.cpp  StackingContext.h
src/ui/styles/: BorderColors.h  BoxSizing.h  ColorProperty.cpp  ColorProperty.h  Display.h  DrawableContentProps.h  Edge.h  Flex.h  Inheritables.cpp  Inheritables.h  Isolation.h  Layout.h  MaybeInherited.h  ObjectFit.h  ObjectPosition.h  Overflow.h  Position.h  PositionType.h  Size.h  Spacing.h  Style.h  Theme.h  Transform.cpp  Transform.h  TransformOrigin.h
src/ui/styles/defaults/: Button.h
src/utils/: CMakeLists.txt  debug.h  functions.cpp  functions.h  operators.cpp  operators.h  types.h
